syntax = "proto3";

import "lib/geospatial.proto";

package LocationMetadataOverpass;

message GetLocationMetadataInput {
  Geospatial.Coordinates coordinates = 1;
  int64 radiusMeters = 2;
}

message GetLocationMetadataOutput {
  string name = 1;
  Address address = 2;
  string phone = 3;
  string website = 4;
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;
  string postcode = 4;
  string housenumber = 5;
  string state = 6;
}
